trunk/Archive2/96/a41bfedf9dd78c/output
main.cpp:25:2: error: expected ';' after class
}
 ^
 ;
1 error generated.
